# ur2_description

./: CMakeLists.txt  README.md  package.xml
doc/: Doxyfile.extra.in
launch/: boxes.launch~  puzzle.launch~  r2d2.launch  ur2.launch  ur2.launch~  ur2_testRSP.launch~
scripts/: ur2_test.py
src/hpp/corbaserver/ur2_robot/: robot.py
srdf/: object.srdf
urdf/: cylinder_obstacle.urdf  object.urdf
